--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.acememo.MainActivity"
+            android:name="com.example.acememo.Level_One"
             android:label="@string/app_name" 
             android:screenOrientation="portrait">
             <intent-filter>
@@ -29,8 +29,7 @@
             android:screenOrientation="portrait"></activity>
         <activity android:name="Game_Level"
             android:screenOrientation="portrait"></activity>
-        <activity android:name="Level_One"
-            android:screenOrientation="portrait"></activity>
+
         <activity android:name="Level_Two"
             android:screenOrientation="portrait"></activity>
         <activity android:name="Level_Three"
