--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.acememo.Level_One"
+            android:name="com.example.acememo.MainActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait">
             <intent-filter>
@@ -26,6 +26,8 @@
         <activity android:name="Continue_TO"
             android:screenOrientation="portrait"></activity>
         <activity android:name="FacebookLogin"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name="Level_One"
             android:screenOrientation="portrait"></activity>
         <activity android:name="Game_Level"
             android:screenOrientation="portrait"></activity>
