--- a/App/AndroidManifest.xml
+++ b/App/AndroidManifest.xml
@@ -31,12 +31,13 @@
             android:screenOrientation="portrait"></activity>
         <activity android:name="Game_Level"
             android:screenOrientation="portrait"></activity>
-
         <activity android:name="Level_Two"
             android:screenOrientation="portrait"></activity>
         <activity android:name="Level_Three"
             android:screenOrientation="portrait"></activity>
         <activity android:name="Result"
+            android:screenOrientation="portrait"></activity>
+                <activity android:name="reviewAnswer"
             android:screenOrientation="portrait"></activity>
     </application>
 
